-- The name of the package.
name:                koshucode-baala-base

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.97.0.0

-- A short (one-line) description of the package.
synopsis:            A notational system for relational model

-- A longer description of the package.
description:         Koshucode is a notation for people and computers
                     who read, write, and calculate relational data.
                     This library provides functions for handling
                     koshucode on computers.

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              SEINO Katsuhiro

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:

-- A copyright notice.
copyright:           2013, SEINO Katsuhiro

category:            Data, Database, Language, Text

build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >= 1.8

extra-source-files:

library
  -- Modules exported by the library.
  exposed-modules:
        Koshucode.Baala.Base
        Koshucode.Baala.Base.Message

        Koshucode.Baala.Base.Abort
        Koshucode.Baala.Base.Abort.Abortable
        Koshucode.Baala.Base.Abort.Reason
        Koshucode.Baala.Base.Abort.Report

        Koshucode.Baala.Base.Data
        Koshucode.Baala.Base.Data.Clock
        Koshucode.Baala.Base.Data.Date
        Koshucode.Baala.Base.Data.Decimal
        Koshucode.Baala.Base.Data.Head
        Koshucode.Baala.Base.Data.Interp
        Koshucode.Baala.Base.Data.Judge
        Koshucode.Baala.Base.Data.Mono
        Koshucode.Baala.Base.Data.Output
        Koshucode.Baala.Base.Data.Para
        Koshucode.Baala.Base.Data.Rel
        Koshucode.Baala.Base.Data.Time
        Koshucode.Baala.Base.Data.Type

        Koshucode.Baala.Base.Prelude
        Koshucode.Baala.Base.Prelude.Assoc
        Koshucode.Baala.Base.Prelude.Class
        Koshucode.Baala.Base.Prelude.Import
        Koshucode.Baala.Base.Prelude.List
        Koshucode.Baala.Base.Prelude.Order
        Koshucode.Baala.Base.Prelude.Pair
        Koshucode.Baala.Base.Prelude.Snip

        Koshucode.Baala.Base.Syntax
        Koshucode.Baala.Base.Syntax.Code
        Koshucode.Baala.Base.Syntax.Infix
        Koshucode.Baala.Base.Syntax.Line
        Koshucode.Baala.Base.Syntax.Tree

        Koshucode.Baala.Base.Text
        Koshucode.Baala.Base.Text.CodeName
        Koshucode.Baala.Base.Text.CodePt
        Koshucode.Baala.Base.Text.Comment
        Koshucode.Baala.Base.Text.Http
        Koshucode.Baala.Base.Text.TextTable
        Koshucode.Baala.Base.Text.Unicode
        Koshucode.Baala.Base.Text.Utility
        Koshucode.Baala.Base.Text.Write

        Koshucode.Baala.Base.Token
        Koshucode.Baala.Base.Token.AngleText
        Koshucode.Baala.Base.Token.Short
        Koshucode.Baala.Base.Token.Token
        Koshucode.Baala.Base.Token.TokenClause
        Koshucode.Baala.Base.Token.TokenLine
        Koshucode.Baala.Base.Token.TokenTree

  -- Modules included in this library but not exported.
  --other-modules:       
  
  -- Other library packages from which modules are imported.
  build-depends:
         base             == 4.*
       , containers       == 0.5.*
       , pretty           == 1.1.*
       , syb              == 0.4.*
       , time             == 1.4.*
       , bytestring       == 0.*
       , http-conduit     == 2.*
       , http-types       == 0.*
       , uri              == 0.*

  ghc-options:         -Wall

