-- The name of the package.
name:                koshucode-baala-base

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.148.0.0

-- A short (one-line) description of the package.
synopsis:            A notational system for relational model

-- A longer description of the package.
description:         Koshucode is a notation for people and computers
                     who read, write, and calculate relational data.
                     This library provides functions for handling
                     koshucode on computers.

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              SEINO Katsuhiro

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:

-- A copyright notice.
copyright:           2013, SEINO Katsuhiro

category:            Data, Database, Language, Text

build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >= 1.8

extra-source-files:

library
  -- Modules exported by the library.
  exposed-modules:
        Koshucode.Baala.Base
        Koshucode.Baala.Base.Message

        Koshucode.Baala.Base.Abort
        Koshucode.Baala.Base.Abort.Abortable
        Koshucode.Baala.Base.Abort.Message
        Koshucode.Baala.Base.Abort.Reason
        Koshucode.Baala.Base.Abort.Report

        Koshucode.Baala.Base.List
        Koshucode.Baala.Base.List.Assoc
        Koshucode.Baala.Base.List.Dots
        Koshucode.Baala.Base.List.List
        Koshucode.Baala.Base.List.Order
        Koshucode.Baala.Base.List.Snip
        Koshucode.Baala.Base.List.Split

        Koshucode.Baala.Base.IO
        Koshucode.Baala.Base.IO.BzFile
        Koshucode.Baala.Base.IO.Exit

        Koshucode.Baala.Base.Prelude
        Koshucode.Baala.Base.Prelude.Case
        Koshucode.Baala.Base.Prelude.Class
        Koshucode.Baala.Base.Prelude.Import
        Koshucode.Baala.Base.Prelude.Pair
        Koshucode.Baala.Base.Prelude.Queue

        Koshucode.Baala.Base.Syntax
        Koshucode.Baala.Base.Syntax.Clause
        Koshucode.Baala.Base.Syntax.Infix
        Koshucode.Baala.Base.Syntax.Line
        Koshucode.Baala.Base.Syntax.Message
        Koshucode.Baala.Base.Syntax.Tree

        Koshucode.Baala.Base.Text
        Koshucode.Baala.Base.Text.IOPoint
        Koshucode.Baala.Base.Text.CodePt
        Koshucode.Baala.Base.Text.Comment
        Koshucode.Baala.Base.Text.Http
        Koshucode.Baala.Base.Text.LineBreak
        Koshucode.Baala.Base.Text.MixText
        Koshucode.Baala.Base.Text.TextTable
        Koshucode.Baala.Base.Text.Unicode
        Koshucode.Baala.Base.Text.Utility
        Koshucode.Baala.Base.Text.Write

  -- Modules included in this library but not exported.
  --other-modules:       
  
  -- Other library packages from which modules are imported.
  build-depends:
         base                  == 4.*
       , blaze-html            == 0.*
       , blaze-markup          == 0.*
       , bytestring            == 0.*
       , containers            == 0.5.*
       , data-default          == 0.*
       , http-conduit          == 2.*
       , http-types            == 0.*
       , network-uri           == 2.*
       , pretty                == 1.*
       , syb                   == 0.*
       , text                  == 1.*
       , utf8-string           == 1.*

  ghc-options:         -Wall

