-- The name of the package.
name:                koshucode-baala-calculator

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.67.0.0

-- A short (one-line) description of the package.
synopsis:            A portable relational calculator

-- A longer description of the package.
description:         This is a portable relational calculator.
                     Relational data and calculations
                     are written in koshucode.
                     This packages contains 'koshu' command.
                     'koshu' reads koshucode data,
                     calculates it, and writes the result.

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              SEINO Katsuhiro

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:

-- A copyright notice.
copyright:           2013, SEINO Katsuhiro

category:            Data, Database, Language, Text

build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >= 1.8

extra-source-files:

executable koshu
  main-is:
        koshu.hs
  other-modules:
  build-depends:
         base                     == 4.6.*
       , directory                == 1.2.*
       , filepath                 == 1.3.*
       , koshucode-baala-base     == 0.67.*
       , koshucode-baala-core     == 0.67.*
       , koshucode-baala-operator == 0.67.*

library
  -- Modules exported by the library.
  exposed-modules:
        Koshucode.Baala.Toolkit.Main.KoshuMain
        Koshucode.Baala.Toolkit.Library.Element
        Koshucode.Baala.Toolkit.Library.Exit
        Koshucode.Baala.Toolkit.Library.Run
        Koshucode.Baala.Toolkit.Library.Version

  -- Modules included in this library but not exported.
  other-modules:       
        Paths_koshucode_baala_calculator
  
  -- Other library packages from which modules are imported.
  build-depends:
         base                     == 4.6.*
       , directory                == 1.2.*
       , filepath                 == 1.3.*
       , koshucode-baala-base     == 0.67.*
       , koshucode-baala-core     == 0.67.*
       , koshucode-baala-operator == 0.67.*

