-- The name of the package.
name:                koshucode-baala-calculator

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.178.0.0

-- A short (one-line) description of the package.
synopsis:            A portable relational calculator

-- A longer description of the package.
description:         This is a portable relational calculator.
                     Relational data and calculations
                     are written in koshucode.
                     This packages contains 'koshu' command.
                     'koshu' reads koshucode data,
                     calculates it, and writes the result.

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              SEINO Katsuhiro

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:

-- A copyright notice.
copyright:           2013, SEINO Katsuhiro

category:            Data, Database, Language, Text

build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >= 1.8

extra-source-files:

executable koshu
  main-is: koshu.hs
  ghc-options: -rtsopts
  other-modules:
  build-depends:
         base                        == 4.*
       , directory                   == 1.*
       , filepath                    == 1.*
       , koshucode-baala-overture    == 0.178.0.0
       , koshucode-baala-base        == 0.178.0.0
       , koshucode-baala-syntax      == 0.178.0.0
       , koshucode-baala-data        == 0.178.0.0
       , koshucode-baala-core        == 0.178.0.0
       , koshucode-baala-rop-flat    == 0.178.0.0
       , koshucode-baala-rop-nested  == 0.178.0.0
       , koshucode-baala-rop-cox     == 0.178.0.0
       , koshucode-baala-cop         == 0.178.0.0
       , koshucode-baala-writer      == 0.178.0.0

library
  -- Modules exported by the library.
  exposed-modules:
        Koshucode.Baala.Toolkit.Library.Element
        Koshucode.Baala.Toolkit.Library.Global
        Koshucode.Baala.Toolkit.Library.Run
        Koshucode.Baala.Toolkit.Library.Version

        Koshucode.Baala.Toolkit.Main.KoshuMain
        Koshucode.Baala.Toolkit.Main.KoshuFilter

  -- Modules included in this library but not exported.
  other-modules:       
        Paths_koshucode_baala_calculator
  
  -- Other library packages from which modules are imported.
  build-depends:
         base                        == 4.*
       , directory                   == 1.*
       , filepath                    == 1.*
       , koshucode-baala-overture    == 0.178.0.0
       , koshucode-baala-base        == 0.178.0.0
       , koshucode-baala-syntax      == 0.178.0.0
       , koshucode-baala-data        == 0.178.0.0
       , koshucode-baala-core        == 0.178.0.0
       , koshucode-baala-rop-flat    == 0.178.0.0
       , koshucode-baala-rop-nested  == 0.178.0.0
       , koshucode-baala-rop-cox     == 0.178.0.0
       , koshucode-baala-cop         == 0.178.0.0
       , koshucode-baala-writer      == 0.178.0.0

