-- The name of the package.
name:                koshucode-baala-cop

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.203.0.0

-- A short (one-line) description of the package.
synopsis:            Term-content operators in Koshucode

-- A longer description of the package.
description:         An impelemntation of term-content operators.
                     These operators are used in the @koshu@ calculator
                     that is contained in the
                     @koshucode-baala-calculator@ package.

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              SEINO Katsuhiro

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:

-- A copyright notice.
copyright:           2013, 2015, SEINO Katsuhiro

category:            Data, Database, Language, Text

build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >= 1.8

extra-source-files:

library
  -- Modules exported by the library.
  exposed-modules:
        Koshucode.Baala.Cop
        Koshucode.Baala.Cop.Arith
        Koshucode.Baala.Cop.Bundle
        Koshucode.Baala.Cop.Coxhand
        Koshucode.Baala.Cop.List
        Koshucode.Baala.Cop.Logic
        Koshucode.Baala.Cop.Misc
        Koshucode.Baala.Cop.Order
        Koshucode.Baala.Cop.Replace
        Koshucode.Baala.Cop.Text
        Koshucode.Baala.Cop.Time
        Koshucode.Baala.Cop.Type

  -- Modules included in this library but not exported.
  --other-modules:       
  
  -- Other library packages from which modules are imported.
  build-depends:
         base                      == 4.*
       , koshucode-baala-overture  == 0.203.0.0
       , koshucode-baala-base      == 0.203.0.0
       , koshucode-baala-subtext   == 0.203.0.0
       , koshucode-baala-syntax    == 0.203.0.0
       , koshucode-baala-type      == 0.203.0.0
       , koshucode-baala-data      == 0.203.0.0
       , koshucode-baala-rop       == 0.203.0.0

