-- The name of the package.
name:                koshucode-baala-core

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.42.0.0

-- A short (one-line) description of the package.
synopsis:            A notational system for relational model

-- A longer description of the package.
description:         Koshucode is a notation for people and computers
                     who read, write, and calculate relational data.
                     This library provides functions for handling
                     koshucode on computers.

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              SEINO Katsuhiro

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:

-- A copyright notice.
copyright:           2013, SEINO Katsuhiro

category:            Data, Database, Language, Text

build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >= 1.8

extra-source-files:

library
  -- Modules exported by the library.
  exposed-modules:
        Koshucode.Baala.Core

        Koshucode.Baala.Core.Assert
        Koshucode.Baala.Core.Assert.Assert
        Koshucode.Baala.Core.Assert.Dataset
        Koshucode.Baala.Core.Assert.Run

        Koshucode.Baala.Core.Content
        Koshucode.Baala.Core.Content.Cox
        Koshucode.Baala.Core.Content.Literal
        Koshucode.Baala.Core.Content.Literal.Class
        Koshucode.Baala.Core.Content.Literal.Extension
        Koshucode.Baala.Core.Content.Literal.HashWord
        Koshucode.Baala.Core.Content.Literal.Literal

        Koshucode.Baala.Core.Relmap
        Koshucode.Baala.Core.Relmap.Construct
        Koshucode.Baala.Core.Relmap.HalfRelmap
        Koshucode.Baala.Core.Relmap.Operand
        Koshucode.Baala.Core.Relmap.Relfy
        Koshucode.Baala.Core.Relmap.Relmap
        Koshucode.Baala.Core.Relmap.Rop

        Koshucode.Baala.Core.Section
        Koshucode.Baala.Core.Section.Bundle
        Koshucode.Baala.Core.Section.Clause
        Koshucode.Baala.Core.Section.Process
        Koshucode.Baala.Core.Section.Quoter
        Koshucode.Baala.Core.Section.Section

  -- Modules included in this library but not exported.
  --other-modules:       
  
  -- Other library packages from which modules are imported.
  build-depends:
         base                 == 4.6.*
       , containers           == 0.5.*
       , directory            == 1.2.*
       , syb                  == 0.3.*
       , template-haskell     == 2.8.*
       , koshucode-baala-base == 0.42.*

  ghc-options:         -Wall

