-- The name of the package.
name:                koshucode-baala-core

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.153.0.0

-- A short (one-line) description of the package.
synopsis:            A notational system for relational model

-- A longer description of the package.
description:         Koshucode is a notation for people and computers
                     who read, write, and calculate relational data.
                     This library provides functions for handling
                     koshucode on computers.

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              SEINO Katsuhiro

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:

-- A copyright notice.
copyright:           2013, SEINO Katsuhiro

category:            Data, Database, Language, Text

build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >= 1.8

extra-source-files:

library
  -- Modules exported by the library.
  exposed-modules:
        Koshucode.Baala.Core
        Koshucode.Baala.Core.Message

        Koshucode.Baala.Core.Assert
        Koshucode.Baala.Core.Assert.Assert
        Koshucode.Baala.Core.Assert.Dataset
        Koshucode.Baala.Core.Assert.RelTable
        Koshucode.Baala.Core.Assert.Run
        Koshucode.Baala.Core.Assert.Message

        Koshucode.Baala.Core.Lexmap
        Koshucode.Baala.Core.Lexmap.Construct
        Koshucode.Baala.Core.Lexmap.Lexmap
        Koshucode.Baala.Core.Lexmap.LexmapTrees
        Koshucode.Baala.Core.Lexmap.Message

        Koshucode.Baala.Core.Relkit
        Koshucode.Baala.Core.Relkit.Construct
        Koshucode.Baala.Core.Relkit.Message
        Koshucode.Baala.Core.Relkit.Relkit
        Koshucode.Baala.Core.Relkit.Run

        Koshucode.Baala.Core.Relmap
        Koshucode.Baala.Core.Relmap.Construct
        Koshucode.Baala.Core.Relmap.Global
        Koshucode.Baala.Core.Relmap.Message
        Koshucode.Baala.Core.Relmap.Option
        Koshucode.Baala.Core.Relmap.Relmap
        Koshucode.Baala.Core.Relmap.Result
        Koshucode.Baala.Core.Relmap.Rop
        Koshucode.Baala.Core.Relmap.Specialize

        Koshucode.Baala.Core.Resource
        Koshucode.Baala.Core.Resource.Clause
        Koshucode.Baala.Core.Resource.Concrete
        Koshucode.Baala.Core.Resource.Include
        Koshucode.Baala.Core.Resource.Message
        Koshucode.Baala.Core.Resource.Read
        Koshucode.Baala.Core.Resource.Run
        Koshucode.Baala.Core.Resource.Resource

  -- Modules included in this library but not exported.
  --other-modules:       
  
  -- Other library packages from which modules are imported.
  build-depends:
         base                    == 4.*
       , bytestring              == 0.*
       , containers              == 0.5.*
       , directory               == 1.2.*
       , filepath                == 1.*
       , mtl                     == 2.*
       , koshucode-baala-base    == 0.153.*
       , koshucode-baala-syntax  == 0.153.*
       , koshucode-baala-data    == 0.153.*

  ghc-options:         -Wall

