-- The name of the package.
name:                koshucode-baala-data

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.120.0.0

-- A short (one-line) description of the package.
synopsis:            A notational system for relational model

-- A longer description of the package.
description:         Koshucode is a notation for people and computers
                     who read, write, and calculate relational data.
                     This library provides functions for handling
                     koshucode on computers.

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              SEINO Katsuhiro

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:

-- A copyright notice.
copyright:           2013, 2015, SEINO Katsuhiro

category:            Data, Database, Language, Text

build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >= 1.8

extra-source-files:

library
  -- Modules exported by the library.
  exposed-modules:
        Koshucode.Baala.Data

        Koshucode.Baala.Data.Message

        Koshucode.Baala.Data.Church.Build
        Koshucode.Baala.Data.Church.Cop
        Koshucode.Baala.Data.Church.Cox
        Koshucode.Baala.Data.Church.Run

        Koshucode.Baala.Data.Content
        Koshucode.Baala.Data.Content.Class
        Koshucode.Baala.Data.Content.Literal
        Koshucode.Baala.Data.Content.Tree

        Koshucode.Baala.Data.Token
        Koshucode.Baala.Data.Token.AngleText
        Koshucode.Baala.Data.Token.Short
        Koshucode.Baala.Data.Token.Term
        Koshucode.Baala.Data.Token.Token
        Koshucode.Baala.Data.Token.TokenClause
        Koshucode.Baala.Data.Token.TokenLine
        Koshucode.Baala.Data.Token.TokenTree

        Koshucode.Baala.Data.Type
        Koshucode.Baala.Data.Type.About
        Koshucode.Baala.Data.Type.Clock
        Koshucode.Baala.Data.Type.Date
        Koshucode.Baala.Data.Type.Decimal
        Koshucode.Baala.Data.Type.Head
        Koshucode.Baala.Data.Type.Interp
        Koshucode.Baala.Data.Type.Judge
        Koshucode.Baala.Data.Type.Mono
        Koshucode.Baala.Data.Type.Para
        Koshucode.Baala.Data.Type.Rel
        Koshucode.Baala.Data.Type.Time
        Koshucode.Baala.Data.Type.Type

  -- Modules included in this library but not exported.
  --other-modules:       
  
  -- Other library packages from which modules are imported.
  build-depends:
         base                 == 4.*
       , blaze-html           == 0.*
       , containers           == 0.5.*
       , pretty               == 1.*
       , syb                  == 0.*
       , time                 == 1.*
       , koshucode-baala-base == 0.120.*

  ghc-options:         -Wall

